# RWFC

./: .gitignore  CMakeLists.txt  README.md  start.sh
includes/: ParserIniFile.h  ParserJsonFile.h
includes/RWFC/: Config.h  ParserFile.h  ParserIniFile.h  ParserJsonFile.h
src/: ParserFile.cpp  ParserIniFile.cpp  ParserJsonFile.cpp
